k8s/registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: container-registry
  labels:
    run: docker-registry
spec:
  selector:
    app: docker-registry
  ports:
    - protocol: TCP
      port: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: container-registry
  labels:
    app: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: docker-registry
        image: registry
        ports:
        - containerPort: 5000
          protocol: TCP
        volumeMounts:
        - name: storage
          mountPath: /var/lib/registry
      volumes:
      - name: storage
        emptyDir: {} # TODO -make this more permanent later
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry
  namespace: container-registry
  annotations:
    kubernetes.io/ingress.class: "ingress"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/http2-push-preload: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.ingress.kubernetes.io/proxy-pass-headers: "Location"

spec:
  tls:
  - hosts:
    - registry.iteam.pub
    secretName: registry-secret-tls
  rules:
  - host: registry.iteam.pub
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: docker-registry
            port:
              number: 5000
