k8s/web.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: web
  name: web
spec:
  ports:
    - port: 80
  type: LoadBalancer
  selector:
    app: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: web
  annotations:
    kubernetes.io/ingress.class: 'public'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.ingress.kubernetes.io/http2-push-preload: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '500m'
    nginx.ingress.kubernetes.io/proxy-pass-headers: 'Location'

spec:
  tls:
    - hosts:
        - iteam.pub
      secretName: web-secret-tls
  rules:
    - host: iteam.pub
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web
                port:
                  number: 80
